--- a/contact.css
+++ b/contact.css
@@ -474,21 +474,21 @@ footer {
     #dropNav {
         display:flex;
         position: absolute;
-        top: 2.5em;
-        /* right: -26em; */
-        right: 0;
+        top: 4em;
+        right: -26em;
+        /* right: 0; */
         width: 24.6em;
-        height: 100vh;
+        height: 90vh;
         list-style: none;
-        background-color: rgba(255, 255, 255, 0.201);
+        background-color: rgba(19, 23, 55, 0.326);
         flex-direction: column;
-        gap: 1em;
+        gap: 0.4em;
         padding: 1em 0.5em;
         overflow: hidden;
         border-radius: 10px 0 10px 10px;
         z-index: 999;
         transition: right 0.3s cubic-bezier(.77,0,.18,1);
-        backdrop-filter: blur(1em);
+        backdrop-filter: blur(2em);
     }
     
     #dropNav:not(.active) {
@@ -497,9 +497,9 @@ footer {
 
     #dropNav.active {
         transition: right 0.3s cubic-bezier(.77,0,.18,1);
-        display: flex;
         right: 0;
         height: 90vh;
+        z-index: 9999;
     }
 
     .home,
@@ -521,8 +521,14 @@ footer {
         color: #fff;
         text-decoration: none;
         display: flex;
-        padding: 1em 2em;
+        padding: 1.3em 2em;
         align-items: center;
+        background-color: #101828;
+        color: #fff;
+        border-radius: 10px;
+        display: flex;
+        /* width: 20em; */
+        border: none;
     }
 
     .ico {
@@ -531,15 +537,20 @@ footer {
         flex-direction: column;
         gap: 4px
     }
+    .ico p:nth-child(1) {
+        font-size: 1.4em;
+        font-weight: 600;
+    }
 
-    #dropNav .active,
+    .ico p:nth-child(2) {
+        color: rgb(161, 161, 161);
+    }
+
+    /* #dropNav .active, */
     .hamburger li a:hover {
-        background-color: #101828;
-        color: #fff;
-        border-radius: 10px;
-        display: flex;
-        /* width: 20em; */
-        border: none;
+        background-color: rgb(255, 255, 255);
+        color: #101828;
+        transition: all ease .3s;
     }
 
     .get-in-touch p{
