--- a/about.css
+++ b/about.css
@@ -133,6 +133,21 @@ span {
     padding-bottom: 5px;
 }
 
+.resume {
+    background-color: rgb(125, 139, 211);
+    padding: 10px 20px;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 5px
+}
+
+.resume:hover{
+    background-color: #fff;
+    transition: all ease .3s;
+    color: #101828;
+    transform: scale(1.05)
+}
+
 .active {
     padding-bottom: 5px;
     border-bottom: 2px solid #fff
