--- a/about.css
+++ b/about.css
@@ -138,7 +138,6 @@ span {
     padding: 10px 20px;
     text-decoration: none;
     color: #fff;
-    border-radius: 5px
 }
 
 .resume:hover{
@@ -214,22 +213,22 @@ span {
 }
 
 .right-img {
-    background-image: url(images/snowman.jpg);
+    background-image: url(images/nick.jpg);
     width: 45%;
     height: 55vh;
     border-radius: 1em;
     background-size: cover;
-    background-position: 50% 20%;
+    background-position: 50% 50%;
 }
 
 .snowman-image {
-    background-image: url(images/snowman.jpg);
+    background-image: url(images/tag.png);
     width: 100%;
     height: 35vh;
-    background-position: 50% 30%;
+    background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: cover;
-    margin-bottom: 2em;
+    margin-bottom: 1.5em;
     border-radius: 1em;
 }
 
@@ -270,14 +269,14 @@ span {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 2em 10em;
+    padding: 4em 10em;
     margin: 10px 0;
     width: 100%;
     gap:5em
 }
 
 .snowman-img {
-    background-image: url(images/snowman.jpg);
+    background-image: url(images/codes.jpg);
     width: 100%;
     height:50vh;
     background-repeat: no-repeat;
