--- a/about.css
+++ b/about.css
@@ -277,6 +277,7 @@ span {
 
 .snowman-img {
     background-image: url(images/codes.jpg);
+    background-position: 50% 30%;
     width: 100%;
     height:50vh;
     background-repeat: no-repeat;
